<resources>
    <string name="app_name">Network</string>
    <string name="email">EMAIL</string>
    <string name="password">PASSWORD</string>
    <string name="log_in">LOG IN</string>
    <string name="sign_up">SIGN UP</string>
    <string name="name">Name</string>
    <string name="status">Status</string>
    <string name="log_out">LOG OUT</string>
    <string name="username">USERNAME</string>
    <string name="symbol">Symbol</string>
    <string name="phone_number">Phone Number</string>
    <string name="title_activity_splash_screen">SplashScreen</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="create_new_account">Create new account</string>
    <string name="profile_picture">profile_picture</string>
    <string name="add_image">Image</string>
    <string name="sign_in">Sign in</string>
    <string name="checkmark">checkMark</string>
    <string name="otp_text_1">Please enter the 6-digit OTP send to</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="verify">Verify</string>
    <string name="resend_otp">Resend OTP</string>
    <string name="did_not_otp">Didnot recieve the OTP?</string>
    <string name="enter_name">Enter name</string>
    <string name="title_activity_front">FrontActivity</string>
    <string name="tab_chat">CHATS</string>
    <string name="tab_status">STATUS</string>
    <string name="add_user">ADD USER</string>
    <string name="no_user_error">NO USER AVAILABLE</string>
    <string name="message">Message</string>
    <string name="gallery">Gallery</string>
    <string name="document">Document</string>
    <string name="camera">Camera</string>
</resources>