<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#1E233E"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="16dp"
        tools:context=".signup.SignUp">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="80sp"
            android:text="Sign up"
            android:textColor="@color/white"
            android:gravity="center"
            android:textStyle="bold"
            android:layout_marginBottom="@dimen/_60sdp"
            />

        <FrameLayout
            android:id="@+id/image_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_10sdp"
            android:background="@drawable/rectangle_2"
            android:layout_gravity="center"
            >

            <com.makeramen.roundedimageview.RoundedImageView
                android:id="@+id/user_image"
                android:layout_width="@dimen/_200sdp"
                android:layout_height="@dimen/_200sdp"
                android:contentDescription="@string/profile_picture"
                android:scaleType="centerCrop"
                android:src="@drawable/rectangle_2"
                app:riv_oval="true"
                />

            <TextView
                android:id="@+id/add_image_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/add_image"
                android:textColor="@color/white"
                android:textSize="@dimen/_14ssp" />
        </FrameLayout>

        <EditText
            android:id="@+id/edit_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginBottom="@dimen/_10sdp"
            android:background="@drawable/box"
            android:gravity="center"
            android:hint="@string/name"
            android:importantForAutofill="no"
            android:inputType="text"
            android:minHeight="48dp"
            android:paddingStart="@dimen/_8sdp"
            android:paddingTop="@dimen/_4sdp"
            android:paddingBottom="@dimen/_4sdp"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="@dimen/_18sdp"
            tools:ignore="LabelFor" />

        <EditText
            android:id="@+id/edit_status"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:background="@drawable/box"
            android:gravity="center"
            android:hint="@string/status"
            android:importantForAutofill="no"
            android:inputType="text"
            android:minHeight="48dp"
            android:paddingStart="@dimen/_8sdp"
            android:paddingTop="@dimen/_4sdp"
            android:paddingBottom="@dimen/_4sdp"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="@dimen/_18sdp"
            tools:ignore="LabelFor" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20sdp">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/sign_up_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/sign_in"
                android:textSize="@dimen/_10ssp"
                app:cornerRadius="@dimen/_10sdp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ProgressBar
                android:id="@+id/prog_sign_up"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_gravity="center"
                android:visibility="gone" />
        </FrameLayout>
    </LinearLayout>
</layout>